# google-tasks-agent

./: .gitignore  README.md  pyproject.toml
scripts/: install.sh  uninstall.sh
src/google_tasks_agent/: __init__.py  action_log.py  agent.py  config.py  models.py  notifications.py  prompt.py  state.py
templates/: com.user.google-tasks-agent.plist.template  google-tasks-agent.service.template  google-tasks-agent.timer.template
