[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-tasks-agent"
version = "1.0.0"
description = "AI-powered agent that scans email and calendar for action items and creates Google Tasks"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.30",
]

[project.scripts]
google-tasks-agent = "google_tasks_agent.agent:main"

[tool.setuptools.packages.find]
where = ["src"]
